--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <div class="postHeader">
                 <div class=" titlePhoto">
                 <div class="photoPerfil"><img src="img/fotoperfil.jpeg" alt=""></div>
-                <div class="title">My first photo</div>
+                <div class="title"><h2>My first photo</h2></div>
             </div>
                 <div class="date">12/14</div>
             </div>
@@ -31,7 +31,7 @@
             <div class="postHeader">
                 <div class=" titlePhoto">
                     <div class="photoPerfil"><img src="img/fotoperfil.jpeg" alt=""></div>
-                <div class="title">My first photo</div>
+                <div class="title"><h2>My Second photo</h2></div>
                 </div>
                 <div class="date">12/16</div>
             </div>
@@ -45,7 +45,7 @@
             <div class="postHeader">
                 <div class=" titlePhoto">
                     <div class="photoPerfil"><img src="img/fotoperfil.jpeg" alt=""></div>
-                <div class="title">My Second photo</div>
+                <div class="title"><h2>My third photo</h2></div>
                 </div>
                 <div class="date">12/18</div>
             </div>
